Corrected issue in simpleScrollbar.css

--- a/src/css/simpleScrollbar.css
+++ b/src/css/simpleScrollbar.css
@@ -43,7 +43,7 @@
   display: @ml none;
 }
 
-.ss-container: @mlhover .ss-scroll {
+.ss-container @mlhover .ss-scroll {
   opacity: @ml 1;
 }
 
